--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
-      "@Components/*": ["./src/components/*"]
+      "@Components/*": ["./src/components/*"],
+      "@API/*": ["./src/app/api/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
