--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
     "paths": {
       "@/*": ["./src/*"],
       "@Components/*": ["./src/components/*"],
+      "@Styles/*": ["./src/styles/*"],
       "@API/*": ["./src/app/api/*"]
     }
   },
