--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
@@ -30,6 +31,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/cookie": "^0.5.1",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
