--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,12 +24,12 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"],
       "@API/*": ["./src/services/api/*"],
       "@Components/*": ["./src/components/*"],
       "@Contexts/*": ["./src/contexts/*"],
       "@Forms/*": ["./src/components/Form/*"],
       "@Styles/*": ["./src/styles/*"],
+      "@Utils/*": ["./src/utils/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
