--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.15",
     "@mui/styled-engine-sc": "^5.11.11",
+    "@types/jwt-decode": "^3.1.0",
     "@types/node": "18.15.10",
     "@types/react": "18.0.30",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
     "eslint": "^8.36.0",
     "eslint-config-next": "13.2.4",
+    "jwt-decode": "^3.1.2",
     "next": "13.2.4",
     "nookies": "^2.5.2",
     "react": "18.2.0",
