--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "server-only": "^0.0.1",
     "styled-components": "^5.3.9",
     "typescript": "5.0.2",
     "zod": "^3.21.4"
