--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
     "eslint": "^8.36.0",
-    "eslint-config-next": "13.2.4",
+    "eslint-config-next": "^13.4.1",
     "jwt-decode": "^3.1.2",
-    "next": "13.2.4",
+    "next": "^13.4.1",
+    "next-auth": "^4.22.1",
     "nookies": "^2.5.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "server-only": "^0.0.1",
     "styled-components": "^5.3.9",
