--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "18.0.30",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
+    "crypto-js": "^4.1.1",
     "eslint": "^8.36.0",
     "eslint-config-next": "^13.4.1",
     "jwt-decode": "^3.1.2",
@@ -31,11 +32,13 @@
     "react-hook-form": "^7.43.9",
     "server-only": "^0.0.1",
     "styled-components": "^5.3.9",
+    "swr": "^2.1.5",
     "typescript": "5.0.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/cookie": "^0.5.1",
+    "@types/crypto-js": "^4.1.1",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
